0.1a:
	* Initial release.

0.2a:
	* Exec time available ( see header.h to turn it on )
	* `delete` issues fixed