@@ -27,25 +27,28 @@ int main(int argc, char* argv[]) {
 	// Set default filename to "Eplith" to make the error messages before launching a script much more pretty
 	EP_filename = "Eplith";
 	
-	// Verify the arguments
-	if(argc < 2) {
-		yyerror("Filename not given");
-	}
-	else if(argc > 2) {
-		yyerror("Too much arguments");
-	}
+	// Set default value for the inline interpreter
+	EP_inlineInterpreter = false;
 	
-#ifdef TYPES_DEBUG // Debug information of types enum
-	edbg("Types: Int: " << typeInt << " | Float: " << typeFloat << " | String: " << typeStr << " | Array: " << typeArray << " | Function: " << typeFunc << " | File: " << typeFile << " | Void: " << typeVoid);
-#endif
-	
-	// Initialize the file
-	newFile(argv[1]);
-	EP_filename = argv[1];
+	#ifdef TYPES_DEBUG // Debug information of types enum
+		edbg("Types: Int: " << typeInt << " | Float: " << typeFloat << " | String: " << typeStr << " | Array: " << typeArray << " | Function: " << typeFunc << " | File: " << typeFile << " | Void: " << typeVoid);
+	#endif
 	
 	// Initalize Eplith libs and default variables
 	Variable::initNullVar();
 	EPblib_init();
+	
+	// Verify the arguments
+	if(argc > 2) {
+		yyerror("Too much arguments");
+	}
+	else if(argc == 2) {
+		// Initialize the file
+		newFile(argv[1]);
+		EP_filename = argv[1];
+	} else {
+		EP_inlineInterpreter = true;
+	}
 	
 	clock_t beginTime = clock();
 	
