@@ -1,0 +1,31 @@
+/*---------------------------------------------------------------------------------
+
+    Eplith Intepreter
+    Copyright (C) 2012 Quent42340 <quent42340@gmail.com>
+
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+---------------------------------------------------------------------------------*/
+v1, v2, v3, v4, v5 = 0, 1, 2, 3, 4;
+
+gets(user);
+
+set(v1, v2, v3, v4, v5) {
+	(user == 0):(4, 3, 2, 1, 0)
+	(user == 1):(3, 2, 1, 0, 4)
+	(user == 2):(2, 1, 0, 4, 3)
+	(user == 3):(1, 0, 4, 3, 2)
+	(default):(same,same,same,same,0)
+};
+
